// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Ingredients/Button Disabled 1`] = `
<button
  className="sc-1rup0b6-0 kapsQV"
  disabled={true}
>
  Button Disabled
</button>
`;

exports[`Storyshots Ingredients/Button Primary 1`] = `
<button
  className="sc-1rup0b6-0 kapsQV"
  disabled={false}
>
  Button
</button>
`;
